tests/compile_fail/declare_scheduler_reserved_name_kernel_default_padded.stderr
error: declare_scheduler!: `name = "  kernel_default  "` is reserved for the built-in Payload::KERNEL_DEFAULT baseline; pick a different name
 --> tests/compile_fail/declare_scheduler_reserved_name_kernel_default_padded.rs:9:12
  |
9 |     name = "  kernel_default  ",
  |            ^^^^^^^^^^^^^^^^^^^^
